deploy/k8s/umbrella-ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umbrella-ui
  labels:
    # Allow this namespace to reach Kafka
    umbrella-kafka-access: "true"
